Fixed alignment issue with exercise name and musclegroup select in a superset

--- a/resources/assets/sass/dashboard.scss
+++ b/resources/assets/sass/dashboard.scss
@@ -240,6 +240,10 @@
   min-height: 100vh;
 }
 
+.deleteExercise-supserset {
+  margin-bottom: -6px;
+}
+
 @media (min-width: 992px) {
   .card-hover {
     background: rgba(255, 255, 255, 0.95);
